--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "perfect-resume-backend",
   "version": "1.0.0",
   "description": "Backend for perfect-resume web app that builds your perfect resume",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
