--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "html-pdf": "^3.0.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
-    "playwright": "^1.44.0",
-    "puppeteer": "^22.3.0"
+    "playwright": "^1.44.0"
   }
 }
